--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@slidev/theme-seriph": "latest",
     "seedrandom": "^3.0.5",
     "vue": "^3.5.18"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.54.1"
   }
 }
