--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm i -D playwright-chromium
 
       - name: Build with Slidev
-        run: npm run build
+        run: npm run build -- --base="./"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
