--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "seedrandom": "^3.0.5",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vuewordcloud": "^19.0.0"
   },
   "devDependencies": {
     "playwright-chromium": "^1.54.1"
